--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "opensea-whitelabel",
-  "version": "0.1.0",
-  "private": true,
+  "author": "Alex Atallah <alex.atallah@opensea.io>",
+  "version": "1.0.0",
+  "description": "An example app showing how to easily white-label OpenSea and create your own NFT marketplace",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/iframe-resizer": "3.5.8",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "iframe-resizer": "4.2.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
