--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "publish": "heroku create -b mars/create-react-app && npm run deploy",
+    "rename": "heroku apps:rename",
+    "deploy": "git push heroku master"
   },
   "eslintConfig": {
     "extends": "react-app"
